fixed bad localization

--- a/source/Localization/LocSource.xaml
+++ b/source/Localization/LocSource.xaml
@@ -250,9 +250,8 @@ Here is the list of commands:</sys:String>
 
     <sys:String x:Key="LOCSuccessStorySearchDescription">Search on SuccessStory data</sys:String>
     <sys:String x:Key="LOCSuccessStorySearchHint" xml:space="preserve">Parameters:
-    -min                Your PC has minimum requirements
-    -rec                Your PC has recommended requirements
-    -any                Your PC has minimum or recommended requirements
+    -percent            Percent of progression
+    -time               Time to full unlock
     -np                 You didn't play the game
     -fav                The game must be a favorite
     -stores={n}     Filter by store name (ex:-stores=steam / -stores=steam,epic)</sys:String>
