--- a/source/Localization/LocSource.xaml
+++ b/source/Localization/LocSource.xaml
@@ -250,8 +250,8 @@ Here is the list of commands:</sys:String>
 
     <sys:String x:Key="LOCSuccessStorySearchDescription">Search on SuccessStory data</sys:String>
     <sys:String x:Key="LOCSuccessStorySearchHint" xml:space="preserve">Parameters:
-    -percent            Percent of progression
-    -time               Time to full unlock
+    -percent            Percent of progression (ex:-percent=50 / -percent=&lt;50 / -percent=&gt;50 / -percent=10&lt;&gt;50)
+    -time               Time to full unlock (ex:-time=5h / -time=&lt;50min / -time=&gt;50s / -time=10min&lt;&gt;5h)
     -np                 You didn't play the game
     -fav                The game must be a favorite
     -stores={n}     Filter by store name (ex:-stores=steam / -stores=steam,epic)</sys:String>
