--- a/source/Localization/LocSource.xaml
+++ b/source/Localization/LocSource.xaml
@@ -254,7 +254,8 @@ Here is the list of commands:</sys:String>
     -time&#x09;&#x09;Time to full unlock (ex:-time=5h / -time=&lt;50min / -time=&gt;50s / -time=10min&lt;&gt;5h)
     -np&#x09;&#x09;You didn't play the game
     -fav&#x09;&#x09;The game must be a favorite
-    -stores={n}&#x09;Filter by store name (ex:-stores=steam / -stores=steam,epic)</sys:String>
+    -stores={n}&#x09;Filter by store name (ex:-stores=steam / -stores=steam,epic)
+    -status={n}&#x09;Filter by status name (ex:-status=played / -status=played,playing)</sys:String>
 
 
     <!-- SuccessStoryEditManual -->
