--- a/source/Controls/PluginList.xaml
+++ b/source/Controls/PluginList.xaml
@@ -129,7 +129,7 @@
                                                           IsGray="{Binding IsGray}"
                                                           Percent="{Binding Percent}"
                                                           EnableRaretyIndicator="{Binding EnableRaretyIndicator}"
-                                                          DispalyRaretyValue="{Binding DisplayRaretyValue}" />
+                                                          DisplayRaretyValue="{Binding DisplayRaretyValue}" />
                             </StackPanel>
                         
                             <Grid Grid.Column="1" Margin="10,0,0,0">
